# kdi

./: README.md  package.json
proto/ros/src/kdi/: CMakeLists.txt  dev-run.sh  package.json  package.xml
proto/ros/src/kdi/public/: index.html
proto/ros/src/kdi/src/: elect_app.js  main.js
proto/script/: download_kernels
src/: App.vue  main.js
src/components/: kdi.vue
