<?xml version="1.0"?>
<?xml-model href="http://download.ros.rog/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>kdi</name>
  <version>0.0.1</version>
  <description> Test Kdi with ROS</description>
  <maintainer email="lukefrasera@gmail.com">Luke Fraser</maintainer>
  <license>LGPLv3</license>
  <author>Luke Fraser</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

